---
source: src/core/config/transformer/union_input_type.rs
expression: config.to_sdl()
---
schema @server(port: 8000) @upstream(baseURL: "http://localhost") {
  query: Query
}

input Bar {
  name: Foo
  rec: Bar
}

input Foo {
  name: String
}

type Query {
  bars(filter: Bar): String @graphQL(args: [{key: "baz", value: "{{.args.baz}}"}], baseURL: "http://localhost", name: "bars")
}
